--- a/src/docs/css/custom.css
+++ b/src/docs/css/custom.css
@@ -1,5 +1,5 @@
 body.body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
     font-size: 100%;
     line-height: 1.5;
     text-align: left;
@@ -7,4 +7,8 @@ body.body {
 
 #navigation, ul, ol {
     line-height: 1;
+}
+
+body pre, body code {
+    font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
 }
