updated doc CSS

--- a/src/docs/css/custom.css
+++ b/src/docs/css/custom.css
@@ -5,11 +5,11 @@ body.body {
     text-align: left;
 }
 
-#navigation ul {
+body #navigation ul {
 	height: 38px;
 }
 
-#navigation, ul, ol {
+body #navigation, ul, ol {
     line-height: 1;
 }
 
